--- a/happyFeetWeb/src/main/resources/application.properties
+++ b/happyFeetWeb/src/main/resources/application.properties
@@ -10,7 +10,7 @@ grecaptcha.secret.login=6LeDCzIUAAAAAM3c8s9CWlMnEpmzDaBg3WopxKcG
 #si TLS true = envio por gmail u otro smtp con autentificacion
 email.from=cuidomispies.cl@gmail.com
 email.cc=
-email.bcc=pablomall@hotmail.com;mcamilettim@gmail.com;
+email.bcc=mcamilettim@gmail.com;
 email.user=cuidomispies.cl@gmail.com
 email.pass=ABUELITADIMETU
 #smtp.office365.com 587 true true
