--- a/happyFeetWeb/src/main/resources/application.properties
+++ b/happyFeetWeb/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/happyfeet
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
 googlemaps.api.key=AIzaSyBz5Zln4Fz9ejZ56UV2_aU0ILnlVe3xdew
 
 grecaptcha.secret.login=6LeDCzIUAAAAAM3c8s9CWlMnEpmzDaBg3WopxKcG
